@@ -1,3 +1,7 @@
+2006-03-16  Alex Roitman  <shura@gramps-project.org>
+	* po/Makefile.in.in: Remove as it is autogenerated.
+	* po/*po: Remove and re-add from old src/po to keep history.
+
 2006-03-15  Alex Roitman  <shura@gramps-project.org>
 	* various: intltoolize and gettextize properly.
 
